Opened 12 years ago

Closed 12 years ago

#9700 closed bug (fixed)

CLI threads command does not include exception/call reason.

Reported by: anevilyak Owned by: anevilyak
Priority: normal Milestone: R1
Component: Applications/Debugger Version: R1/Development
Keywords: Cc:
Blocked By: Blocking:
Platform: All

Description

The debugger CLI's "threads" command currently lists a thread's state, but does not actually include the reason for the stopped state, i.e. the message passed to a deliberate debugger call. It needs to, especially for things like app_server crashes due to hitting an assert.

Change History (1)

comment:1 by anevilyak, 12 years ago

Resolution: fixed
Status: newclosed

Fixed in hrev45545.

Note: See TracTickets for help on using tickets.