Fix #9700.

- CLI "threads" command now outputs the exception reason for stopped
  threads, if available.